Upgrade versions of dependencies